--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,5 +17,11 @@
       Nollaa
     </button>
   </form>
+  <form action="/add" method="POST">
+    <input type="Arvo:" id="amount" name="amount" required>
+    <button type="submit">
+      Lisää
+    </button>
+  </form>
 </body>
 </html>
